--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>TaskFlow</title>
   </head>
-  <body>
+  <body class="customized_scrollbar">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
